[package]
authors = ["Sterling DeMille <sterlingdemille+github@gmail.com>"]
name = "encrusted"
version = "1.1.0"
description = "A z-machine (interpreter) for Infocom-era text adventure games"
repository = "https://github.com/demille/encrusted"
readme = "README.md"
license = "MIT"

[[bin]]
name = "encrusted"
path = "src/rust/main.terminal.rs"

[lib]
crate-type = ["cdylib"]
name = "web"
path = "src/rust/main.web.rs"

[profile.release]
lto = true
opt-level = 's'

[dependencies]
base64 = "0.12.3"
enum_primitive = "0.1.1"
rand = "0.7.3"
rand_xoshiro = "0.4.0"
serde = "1.0.115"
serde_derive = "1.0.115"
serde_json = "1.0.57"

[target."cfg(target_arch = \"wasm32\")".dependencies]
wasm-glue = "0.1.0"

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
atty = "0.2.11"
clap = "2.32.0"
lazy_static = "1.2.0"
regex = "1.1.0"
term_size = "0.3.1"
